==> ecdr/elua/src/platform/sam34/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "uip_arp.h"
#include "elua_uip.h"
#include "uip-conf.h"
#include "elua_adc.h"
#include "platform_conf.h"
#include "common.h"
#include "math.h"
#include "diskio.h"
#include "lua.h"
#include "lauxlib.h"
#include "lrotable.h"
#include "elua_int.h"
#include <asf.h>
#include <assert.h>
#define SYSTICKHZ 5

int platform_init()
{
  // Set the clocking to run from PLL
#warning FIXME - check clock setup
  sysclk_init();

  board_init();		// ASF

//	LED_Off(LED0_GPIO);
//	LED_Off(LED1_GPIO);
  
  // Setup PIO
  pios_init();

  // Setup SSIs
  spis_init();

  // Setup UARTs
  uarts_init();

  // Setup timers
  timers_init();

#ifdef BUILD_I2C
  // Setup I2Cs
  i2cs_init();
#endif // ifdef BUILD_I2C

#if NUM_PWM > 0
  // Setup PWMs
  pwms_init();
#endif

#ifdef BUILD_ADC
  // Setup ADCs
  adcs_init();
#endif

#ifdef BUILD_CAN
  // Setup CANs
  cans_init();
#endif

#ifdef BUILD_USB_CDC
  // Setup USB
  usb_init();
#endif



  // Setup system timer
  	if (SysTick_Config(platform_cpu_get_frequency() / SYSTICKHZ))
      return PLATFORM_ERR;    // SysTick error

  cmn_platform_init();

  // All done
  return PLATFORM_OK;
}

static void pios_init()
{
  unsigned i;
  
  for( i = 0; i < NUM_PIO; i ++)
    pmc_enable_periph_clk(pio_id[i]);
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1; 
  Pio * base = pio_base[ port ];

  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:
      pio_set_output( base, PIO_MASK_ALL, pinmask, DISABLE, DISABLE );
#warning Need to figure settings for default level, open drain, pull up      
      break;

    case PLATFORM_IO_PIN_SET:
      pio_set( base, pinmask );
      break;

    case PLATFORM_IO_PIN_CLEAR:
      pio_clear( base, pinmask );
      break;

    case PLATFORM_IO_PORT_DIR_INPUT:
      pinmask = PIO_MASK_ALL;
    case PLATFORM_IO_PIN_DIR_INPUT:
      pio_set_input( base, pinmask, DISABLE );
#warning How handle pullup?
      break;

    case PLATFORM_IO_PORT_DIR_OUTPUT:
      pinmask = PIO_MASK_ALL;
    case PLATFORM_IO_PIN_DIR_OUTPUT:
      pio_set_output( base, pinmask, LOW, DISABLE, DISABLE );
#warning Need to figure settings for default level, open drain, pull up
      break;

    case PLATFORM_IO_PORT_GET_VALUE:
      retval = pio_get( base, PIO_TYPE_PIO_INPUT, PIO_MASK_ALL );
      break;

    case PLATFORM_IO_PIN_GET:
      retval = pio_get( base, PIO_TYPE_PIO_INPUT, pinmask ) ? 1 : 0;
      break;

    case PLATFORM_IO_PIN_PULLUP:
      pio_pull_up( base, pinmask, ENABLE);
      break;
      
    case PLATFORM_IO_PIN_NOPULL:
      pio_pull_up( base, pinmask, DISABLE);
      break;

    case PLATFORM_IO_PIN_PULLDOWN:
#warning Check to see if has pulldown
    default:
      retval = 0;
      break;
  }
  return retval;
}

void cans_init( void )
{
  pmc_enable_periph_clk(ID_CAN0);
  can_init(CAN0, CANCLK, CAN_BPS_1000K);
#warning Need to check speed - use default from above
  can_reset_all_mailbox(CAN0);
//  can_enable_interrupt(CAN0, uint32_t dw_mask)
#warning - What is dw_mask?

  #warning Need to check mailbox particular
  can_rx_mailbox.ul_mb_idx = 0;
  can_rx_mailbox.uc_obj_type = CAN_MB_RX_MODE;
  can_rx_mailbox.ul_id_msk = CAN_MAM_MIDvA_Msk | CAN_MAM_MIDvB_Msk;
  can_rx_mailbox.ul_id = CAN_MID_MIDvA(0x00);
  can_mailbox_init(CAN0, &can_rx_mailbox);
}

u32 platform_can_setup( unsigned id, u32 clock )
{
  can_disable(can_base[id]);
  can_init(can_base[id], CANCLK, clock);
  can_enable(can_base[id]);
  return clock;    // FIXME: Should return clock actually set
}

static void spis_init()
{
  unsigned i;
  
  for (i = 0; i < NUM_SPI; i++)
  {
  pmc_enable_periph_clk(spi_id[i]); // FIXME: Is this needed? Not listed in example
  
  spi_enable_clock(spi_base[i]);
  spi_reset(spi_base[i]);
  spi_set_master_mode(spi_base[i]);
  spi_disable_mode_fault_detect(spi_base[i]);
  spi_disable_loopback(spi_base[i]);
//  spi_set_peripheral_chip_select_value(spi_base[i], DEFAULT_CHIP_ID);
  spi_set_fixed_peripheral_select(spi_base[i]);         // ??
  spi_disable_peripheral_select_decode(spi_base[i]);    // ??
  spi_set_delay_between_chip_select(spi_base[i], CONFIG_SPI_MASTER_DELAY_BCS);
  }
}

u32 platform_spi_setup( unsigned id, int mode, u32 clock, unsigned cpol, unsigned cpha, unsigned databits )
{
  if (mode = PLATFORM_SPI_MASTER) 
  {
    struct spi_device *device;
    
// FIXME: Copied from quickstart code - ??? not sure what the device or ID is.
//void spi_master_setup_device(struct spi_device *device) - this was calling signature
    spi_set_transfer_delay(spi_base[id], device->id, CONFIG_SPI_MASTER_DELAY_BS,  CONFIG_SPI_MASTER_DELAY_BCT);

    spi_set_bits_per_transfer(spi_base[id], device->id, databits);
    spi_set_baudrate_div(spi_base[id], device->id, spi_calc_baudrate_div(clock, platform_cpu_get_frequency()));

    spi_configure_cs_behavior(spi_base[id], device->id, SPI_CS_KEEP_LOW);
    spi_set_clock_polarity(spi_base[id], device->id, cpol);
    spi_set_clock_phase(spi_base[id], device->id, cpha);

// FIXME: So far just enables configures SPI pins 
    gpio_configure_pin(SPI0_MISO_GPIO, SPI0_MISO_FLAGS);
    gpio_configure_pin(SPI0_MOSI_GPIO, SPI0_MOSI_FLAGS);
    gpio_configure_pin(SPI0_SPCK_GPIO, SPI0_SPCK_FLAGS);
// Alternate pins for NPCS on SPI0 (pick 1)
// FIXME: Needs uniform way to handle pin mapping (or at least add a regular control variable)
#ifndef SPI0_NPCS_PIN1
    gpio_configure_pin(SPI0_NPCS0_GPIO, SPI0_NPCS0_FLAGS);
#else
    gpio_configure_pin(SPI0_NPCS1_PA29_GPIO, SPI0_NPCS1_PA29_FLAGS);
#endif
    return 0; // clock; // FIXME: Return clock set
  }
  else
  { // FIXME: Need to implement slave
    return 0;
  }
}

u32 platform_i2c_setup( unsigned id, u32 speed )
{
	twi_options_t opt;
  
  pmc_enable_periph_clk(i2c_id[id]);

// Configure pins
// TODO: Make this data driven (table)
  if (id == 0)
  {
    gpio_configure_pin(TWI0_DATA_GPIO, TWI0_DATA_FLAGS);
    gpio_configure_pin(TWI0_CLK_GPIO, TWI0_CLK_FLAGS);
  }
  else
  {
    gpio_configure_pin(TWI1_DATA_GPIO, TWI1_DATA_FLAGS);
    gpio_configure_pin(TWI1_CLK_GPIO, TWI1_CLK_FLAGS);
  }
  
  opt.master_clk = platform_cpu_get_frequency();
	opt.speed      = speed;

  if (twi_master_init(i2c_base[id], &opt) != TWI_SUCCESS) 
    return PLATFORM_ERR;
  else
    return ;// FIXME: What?
}

static void uarts_init()
{
//  unsigned i;

//  for( i = 0; i < NUM_UART; i ++ )
//    sysclk_enable_peripheral_clock(uart_id[i]);
  sysclk_enable_peripheral_clock(ID_UART);
//  stdio_serial_init(CONF_UART, &uart_serial_options);

}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  sam_usart_opt_t usart_settings;

  if( id < NUM_UART )
  {
    usart_settings.baudrate = baud;
    switch( databits )
    {
      case 5:
        usart_settings.char_length = US_MR_CHRL_5_BIT;
        break;
      case 6:
        usart_settings.char_length = US_MR_CHRL_6_BIT;
        break;
      case 7:
        usart_settings.char_length = US_MR_CHRL_7_BIT;
        break;
      case 9:
        usart_settings.char_length = US_MR_MODE9;
        break;
      default:
        usart_settings.char_length = US_MR_CHRL_8_BIT;
        break;
    };
    switch( parity )
    {
      case PLATFORM_UART_PARITY_EVEN:
        usart_settings.parity_type = US_MR_PAR_EVEN;
        break;
      case PLATFORM_UART_PARITY_ODD:
        usart_settings.parity_type = US_MR_PAR_ODD;
        break;
      case PLATFORM_UART_PARITY_MARK:
        usart_settings.parity_type = US_MR_PAR_MARK;
        break;
      case PLATFORM_UART_PARITY_SPACE:
        usart_settings.parity_type = US_MR_PAR_SPACE;
        break;
      default:
        usart_settings.parity_type = US_MR_PAR_NO;
        break;
    };
    switch( stopbits )
    {
      case PLATFORM_UART_STOPBITS_2:
        usart_settings.stop_bits = US_MR_NBSTOP_2_BIT;
        break;
      case PLATFORM_UART_STOPBITS_1_5:
        usart_settings.stop_bits = US_MR_NBSTOP_1_5_BIT;
        break;
      default:
        usart_settings.stop_bits = US_MR_NBSTOP_1_BIT;
        break;
    };
    usart_settings.channel_mode = US_MR_CHMODE_NORMAL;
    
    if (usart_init_rs232(uart_base[id], &usart_settings, platform_cpu_get_frequency()))
      return 0;     // Fixme: Failure
      
    usart_enable_tx(uart_base[id]);
    usart_enable_rx(uart_base[id]);
  // Need to configure pins for ports other than UART0 (assuming UART0 handled by ASF)

/*    PIO_Configure( g_APinDescription[PINS_UART].pPort, g_APinDescription[PINS_UART].ulPinType,
    g_APinDescription[PINS_UART].ulPin, g_APinDescription[PINS_UART].ulPinConfiguration); */
    
// FIXME: Make something data driven (table) here
  switch(id)
  {
    case 0:
    break;
    case 1:
    gpio_configure_pin(PIN_USART0_RXD_IDX, PIN_USART0_RXD_FLAGS);
    gpio_configure_pin(PIN_USART0_TXD_IDX, PIN_USART0_TXD_FLAGS);
    break;
    case 2:
    gpio_configure_pin(PIN_USART1_RXD_IDX, PIN_USART1_RXD_FLAGS);
    gpio_configure_pin(PIN_USART1_TXD_IDX, PIN_USART1_TXD_FLAGS);
    break;
    case 3:
    gpio_configure_pin(PIN_USART3_RXD_IDX, PIN_USART3_RXD_FLAGS);
    gpio_configure_pin(PIN_USART3_TXD_IDX, PIN_USART3_TXD_FLAGS);
    default:
    
    break;
    }
  }

  return baud;
}

static void timers_init()
{
//  unsigned i;

//  for( i = 0; i < NUM_TC; i ++ )
//    pmc_enable_periph_clk(timer_id[i]);
  pmc_enable_periph_clk(ID_TC0);
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
  u32 res = 0;

  data = data;
  switch( op )
  {
    case PLATFORM_TIMER_OP_START:
        res = 0xFFFFFFFF;      // FIXME
//      MAP_TimerControlTrigger(base, TIMER_A, false);
//      MAP_TimerLoadSet( base, TIMER_A, 0xFFFFFFFF );
        tc_init(TC0, id, TC_CMR_WAVE);   // FIXME - figure out mode
        tc_start(TC0, id);    // FIXME
      break;

    case PLATFORM_TIMER_OP_READ:
      res = tc_read_cv(TC0, id);
      break;

    case PLATFORM_TIMER_OP_SET_CLOCK:
    case PLATFORM_TIMER_OP_GET_CLOCK:
//      res = MAP_SysCtlClockGet();
// FIXME
      break;

    case PLATFORM_TIMER_OP_GET_MAX_CNT:
      res = PLATFORM_TIMER_COUNT_MAX;
      break;
  }
  return res;
}

static void pwms_init()
{
  pmc_enable_periph_clk(ID_PWM);
}

u32 platform_pwm_set_clock( unsigned id, u32 clock )
{
/*
  if clock == 0
    unuse previous clock;
  
  if clock == clocka
    Add another user of clocka
  if clock == clockb
    Add another user of clockb
  prescale = pwm_find_clock_prescaler(clock);
  if (freq_from_pre(prescaler) == clock )
    add user of appropriate division
  if clocka available
    use it
  if clockb available
    use it
  Make do with closest match
    how close is prescaler vs clocka vs clockb
*/
  if (clock)
  {
    // FIXME: Should disable any active PWM channels before setting clock
    // FIXME: Allow use clockb and fixed divisors
    //  e.g. keep track of clock value settings (and accept 2 different values, plus using divisions of mck)
    pwm_clock.ul_clka = clock;
    pwm_clock.ul_mck = CPU_FREQUENCY;
    pwm_init(PWM, &pwm_clock);
    if (pwm_chan_clock[id] == 0) pwm_clka_users++;        // Increment use count if wasn't already using
    pwm_chan_clock[id] = clock;
    pwm_chan_pre[id] = PWM_PRE_CLOCKA;
  }
  else
    if (pwm_chan_clock[id])           // Clearing clock on channel that was in use
    {
    pwm_chan_clock[id] = 0;
    pwm_clka_users--;
    }
  Assert(pwm_clka_users < NUM_PWM);
  return clock; // FIXME - what is it supposed to return?
}

u32 platform_pwm_setup( unsigned id, u32 frequency, unsigned duty )
{
// FIXME: Probably need to fill in default values for other fields in pwm_inst
  pwm_channel_t pwm_inst;
  u32 pwmclk;        // base clock frequency for PWM counter
  u32 period;        // number of base clocks per cycle
  u32 duty_clocks;    // number of base clocks to be high (low?) for
  
  if (id >= NUM_PWM || duty > 100 || pwm_chan_clock[id] == 0) return 0;

  pwmclk = pwm_chan_clock[id];  

  // Compute period and duty period in clock cycles.
  //
  // PWM output wave frequency is requested in Hz but programmed as a
  // number of cycles of the master PWM clock frequency.
  //
  // Here, we use rounding to select the numerically closest available
  // frequency and return the closest integer in Hz to that.

  period = (pwmclk + frequency/2) / frequency;
  if (period == 0) period = 1;  
  if (period > PWM_MAX_PERIOD) period = PWM_MAX_PERIOD;
  duty_clocks = (period * duty + 50) / 100;
  
  pwm_inst.ul_prescaler = PWM_CMR_CPRE_CLKA;
  pwm_inst.channel = pwm_chan[id];
  pwm_inst.ul_period = period;
  pwm_inst.ul_duty = duty_clocks;
  pwm_channel_init(PWM, &pwm_inst);
  //FIXME: Need to configure associated pin appropriately

  return (pwmclk + period/2) / period;
}

void platform_pwm_start( unsigned id )
{
  if ( pwm_chan_clock[id] )
    pwm_channel_enable(PWM, pwm_chan[id]);
}

void platform_pwm_stop( unsigned id )
{
  pwm_channel_disable(PWM, pwm_chan[id]);
}

int platform_flash_erase_sector( u32 sector_id )
{
  return (flash_erase_sector(sector_id) == FLASH_RC_OK) ? PLATFORM_OK : PLATFORM_ERR;
}
