==> ecdr/elua/src/platform/lm3s/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "uip_arp.h"
#include "elua_uip.h"
#include "elua_adc.h"
#include "uip-conf.h"
#include "platform_conf.h"
#include "common.h"
#include "math.h"
#include "diskio.h"
#include "lua.h"
#include "lauxlib.h"
#include "lrotable.h"
#include "elua_int.h"
#include "driverlib/pin_map.h"
#include "driverlib/debug.h"
#include "driverlib/gpio.h"
#include "driverlib/can.h"
#include "driverlib/interrupt.h"
#include "driverlib/sysctl.h"
#include "driverlib/uart.h"
#include "driverlib/ssi.h"
#include "driverlib/timer.h"
#include "driverlib/pwm.h"
#include "driverlib/adc.h"
#include "driverlib/ethernet.h"
#include "driverlib/systick.h"
#include "driverlib/flash.h"
#include "elua_net.h"
#include "dhcpc.h"
#include "buf.h"
#include "rit128x96x4.h"
#include "disp.h"
#include "utils.h"
  #define TARGET_IS_TEMPEST_RB1
  #include "lm3s9b92.h"
  #define TARGET_IS_FIRESTORM_RA2
  #include "lm3s9d92.h"
  #include "lm3s8962.h"
  #include "lm3s6965.h"
  #include "lm3s6918.h"
  #include "lm4f120h5qr.h"
#include "driverlib/rom.h"
#include "driverlib/rom_map.h"
#include "driverlib/usb.h"
#include "usblib/usblib.h"
#include "usblib/usbcdc.h"
#include "usblib/device/usbdevice.h"
#include "usblib/device/usbdcdc.h"
#include "usb_serial_structs.h"
#define SYSTICKHZ               5
#define SYSTICKMS               (1000 / SYSTICKHZ)

int platform_init()
{
  // Set the clocking to run from PLL

#if defined( FORLM3S9B92 ) || defined( FORLM3S9D92 ) || defined ( FORLM4F )
  MAP_SysCtlClockSet(SYSCTL_SYSDIV_2_5 | SYSCTL_USE_PLL | SYSCTL_OSC_MAIN | SYSCTL_XTAL_16MHZ);
#else
  MAP_SysCtlClockSet(SYSCTL_SYSDIV_4 | SYSCTL_USE_PLL | SYSCTL_OSC_MAIN | SYSCTL_XTAL_8MHZ);
#endif

  // Setup PIO
  pios_init();

#if NUM_SPI > 0
  // Setup SPIs
  spis_init();
#endif

  // Setup UARTs
  uarts_init();

  // Setup timers
  timers_init();

#ifdef BUILD_I2C
  // Setup I2Cs
  i2cs_init();
#endif // ifdef BUILD_I2C

#if NUM_PWM > 0
//#ifdef BUILD_PWM
  // Setup PWMs
  pwms_init();
#endif

#ifdef BUILD_COMP
  // Setup comparators
  comps_init();
#endif

#ifdef BUILD_ADC
  // Setup ADCs
  adcs_init();
#endif

#ifdef BUILD_CAN
  // Setup CANs
  cans_init();
#endif

#ifdef BUILD_USB_CDC
  // Setup USB
  usb_init();
#endif

  // Setup system timer
  cmn_systimer_set_base_freq( MAP_SysCtlClockGet() );
  cmn_systimer_set_interrupt_freq( SYSTICKHZ );

#ifdef BUILD_UIP
  // Setup ethernet (TCP/IP)
  eth_init();
#endif

  // Common platform initialization code
  cmn_platform_init();

  // Virtual timers
  // If the ethernet controller is used the timer is already initialized, so skip this sequence
#if VTMR_NUM_TIMERS > 0 && !defined( BUILD_UIP )
  // Configure SysTick for a periodic interrupt.
  MAP_SysTickPeriodSet( MAP_SysCtlClockGet() / SYSTICKHZ );
  MAP_SysTickEnable();
  MAP_SysTickIntEnable();
  MAP_IntMasterEnable();
#endif

  MAP_FlashUsecSet( SysCtlClockGet() );

  // All done
  return PLATFORM_OK;
}

static void pios_init()
{
  unsigned i;

  for( i = 0; i < NUM_PIO; i ++ )
    MAP_SysCtlPeripheralEnable(pio_sysctl[ i ]);
#ifdef PIO_UNLOCK_NMI
// Unlock PD7 and PF0 (NMI) so can reprogram
    GPIO_PORTD_LOCK_R = GPIO_LOCK_KEY;
    GPIO_PORTD_CR_R = 0xFF;
    GPIO_PORTD_LOCK_R = 0;
    GPIO_PORTF_LOCK_R = GPIO_LOCK_KEY;
    GPIO_PORTF_CR_R = 0xFF;
    GPIO_PORTF_LOCK_R = 0;
#endif //UNLOCK_NMI
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1, base = pio_base[ port ];

  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:
      MAP_GPIOPinWrite( base, 0xFF, pinmask );
      break;

    case PLATFORM_IO_PIN_SET:
      MAP_GPIOPinWrite( base, pinmask, pinmask );
      break;

    case PLATFORM_IO_PIN_CLEAR:
      MAP_GPIOPinWrite( base, pinmask, 0 );
      break;

    case PLATFORM_IO_PORT_DIR_INPUT:
      pinmask = 0xFF;
    case PLATFORM_IO_PIN_DIR_INPUT:
      MAP_GPIOPinTypeGPIOInput( base, pinmask );
      break;

    case PLATFORM_IO_PORT_DIR_OUTPUT:
      pinmask = 0xFF;
    case PLATFORM_IO_PIN_DIR_OUTPUT:
      MAP_GPIOPinTypeGPIOOutput( base, pinmask );
      break;

    case PLATFORM_IO_PORT_GET_VALUE:
      retval = MAP_GPIOPinRead( base, 0xFF );
      break;

    case PLATFORM_IO_PIN_GET:
      retval = MAP_GPIOPinRead( base, pinmask ) ? 1 : 0;
      break;

    case PLATFORM_IO_PIN_PULLUP:
    case PLATFORM_IO_PIN_PULLDOWN:
      MAP_GPIOPadConfigSet( base, pinmask, GPIO_STRENGTH_8MA, op == PLATFORM_IO_PIN_PULLUP ? GPIO_PIN_TYPE_STD_WPU : GPIO_PIN_TYPE_STD_WPD );
      break;

    case PLATFORM_IO_PIN_NOPULL:
      MAP_GPIOPadConfigSet( base, pinmask, GPIO_STRENGTH_8MA, GPIO_PIN_TYPE_STD );
      break;

    default:
      retval = 0;
      break;
  }
  return retval;
}

void cans_init( void )
{
  MAP_SysCtlPeripheralEnable( SYSCTL_PERIPH_CAN0 ); 
  MAP_CANInit( CAN0_BASE );
  MAP_CANBitRateSet(CAN0_BASE, LM3S_CAN_CLOCK, CAN_INIT_SPEED);
  MAP_CANIntEnable( CAN0_BASE, CAN_INT_MASTER | CAN_INT_ERROR | CAN_INT_STATUS );
  MAP_IntEnable(INT_CAN0);
  MAP_CANEnable(CAN0_BASE);

  // Configure default catch-all message object
  can_msg_rx.ulMsgID = 0;
  can_msg_rx.ulMsgIDMask = 0;
  can_msg_rx.ulFlags = MSG_OBJ_RX_INT_ENABLE | MSG_OBJ_USE_ID_FILTER;
  can_msg_rx.ulMsgLen = PLATFORM_CAN_MAXLEN;
  MAP_CANMessageSet(CAN0_BASE, CAN_MSG_OBJ_RX, &can_msg_rx, MSG_OBJ_TYPE_RX);
}

u32 platform_can_setup( unsigned id, u32 clock )
{  
  MAP_GPIOPinConfigure(PIN_CAN0RX);
  MAP_GPIOPinConfigure(PIN_CAN0TX);
  MAP_GPIOPinTypeCAN(CAN_PORT_BASE, CAN_PORT_PINS);

  MAP_CANDisable(CAN0_BASE);
  MAP_CANBitRateSet(CAN0_BASE, LM3S_CAN_CLOCK, clock );
  MAP_CANEnable(CAN0_BASE);
  return clock;
}

static void spis_init()
{
  unsigned i;

#if defined( ELUA_BOARD_SOLDERCORE )
  MAP_GPIOPinConfigure( GPIO_PH4_SSI1CLK );
  MAP_GPIOPinConfigure( GPIO_PF4_SSI1RX );
  MAP_GPIOPinConfigure( GPIO_PF5_SSI1TX );
#else
// TODO: fix Pin Mux
#ifdef USE_PIN_MUX

#error Debug: USE_PIN_MUX is on
// TODO: Instead should probably do pin configure first time actually setup a SPI port (so don't configure unused ports)

  for( i = 0; i < NUM_SPI; i ++ ){
    MAP_GPIOPinConfigure(ssi_rx_pin[i]);
    MAP_GPIOPinConfigure(ssi_tx_pin[i]);
    MAP_GPIOPinConfigure(ssi_clk_pin[i]);
//    GPIOPinConfigure(ssi_fss_pin[i]);
  };
#endif

#endif

  for( i = 0; i < NUM_SPI; i ++ )
    MAP_SysCtlPeripheralEnable( spi_sysctl[ i ] );
}

u32 platform_spi_setup( unsigned id, int mode, u32 clock, unsigned cpol, unsigned cpha, unsigned databits )
{
  unsigned protocol;

  if( cpol == 0 )
    protocol = cpha ? SSI_FRF_MOTO_MODE_1 : SSI_FRF_MOTO_MODE_0;
  else
    protocol = cpha ? SSI_FRF_MOTO_MODE_3 : SSI_FRF_MOTO_MODE_2;
  mode = mode == PLATFORM_SPI_MASTER ? SSI_MODE_MASTER : SSI_MODE_SLAVE;
  MAP_SSIDisable( spi_base[ id ] );

  MAP_GPIOPinTypeSSI( spi_gpio_base[ id ], spi_gpio_pins[ id ] );
  MAP_GPIOPinTypeSSI( spi_gpio_clk_base[ id ], spi_gpio_clk_pin[ id ] );

  // FIXME: not sure this is always "right"
  MAP_GPIOPadConfigSet( spi_gpio_base[ id ], spi_gpio_pins[ id ], GPIO_STRENGTH_4MA, GPIO_PIN_TYPE_STD_WPU );
  MAP_GPIOPadConfigSet( spi_gpio_clk_base[ id ], spi_gpio_clk_pin[ id ], GPIO_STRENGTH_4MA, GPIO_PIN_TYPE_STD_WPU );

  MAP_SSIConfigSetExpClk( spi_base[ id ], MAP_SysCtlClockGet(), protocol, mode, clock, databits );
  MAP_SSIEnable( spi_base[ id ] );
  return clock;
}

u32 platform_i2c_setup( unsigned id, u32 speed )
{
  //FIXME: Pin mux - may not need for all parts

#ifdef USE_PIN_MUX
  MAP_GPIOPinConfigure(i2c_scl_pin[ id ]);
  MAP_GPIOPinConfigure(i2c_sda_pin[ id ]);
#endif

  MAP_GPIOPinTypeI2C( i2c_gpio_base[ id ], i2c_gpio_pins[ id ] );

  MAP_I2CMasterInitExpClk( i2c_base[id], MAP_SysCtlClockGet(),  
                    speed == PLATFORM_I2C_SPEED_SLOW);
  //FIXME: Needs to return speed actually set
}

static void uarts_init()
{
  unsigned i;
  for( i = 0; i < NUM_UART; i ++ )
    MAP_SysCtlPeripheralEnable(uart_sysctl[ i ]);
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  u32 config;

  if( id < NUM_UART )
  {
#ifdef UART_PIN_CONFIGURE
    MAP_GPIOPinConfigure( uart_gpiofunc[ id << 1 ] );
    MAP_GPIOPinConfigure( uart_gpiofunc[ ( id << 1 ) + 1 ] );
#endif    
    MAP_GPIOPinTypeUART( uart_gpio_base[ id ], uart_gpio_pins[ id ] );

    switch( databits )
    {
      case 5:
        config = UART_CONFIG_WLEN_5;
        break;
      case 6:
        config = UART_CONFIG_WLEN_6;
        break;
      case 7:
        config = UART_CONFIG_WLEN_7;
        break;
      default:
        config = UART_CONFIG_WLEN_8;
        break;
    }
    config |= ( stopbits == PLATFORM_UART_STOPBITS_1 ) ? UART_CONFIG_STOP_ONE : UART_CONFIG_STOP_TWO;
    if( parity == PLATFORM_UART_PARITY_EVEN )
      config |= UART_CONFIG_PAR_EVEN;
    else if( parity == PLATFORM_UART_PARITY_ODD )
      config |= UART_CONFIG_PAR_ODD;
    else if( parity == PLATFORM_UART_PARITY_MARK )
      config |= UART_CONFIG_PAR_ONE;
    else if( parity == PLATFORM_UART_PARITY_SPACE )
      config |= UART_CONFIG_PAR_ZERO;
    else
      config |= UART_CONFIG_PAR_NONE;

    MAP_UARTConfigSetExpClk( uart_base[ id ], MAP_SysCtlClockGet(), baud, config );
    MAP_UARTConfigGetExpClk( uart_base[ id ], MAP_SysCtlClockGet(), &baud, &config );

    MAP_UARTEnable( uart_base[ id ] );
  }
  return baud;
}

static void timers_init()
{
  unsigned i;

  for( i = 0; i < NUM_TIMER; i ++ )
  {
    MAP_SysCtlPeripheralEnable(timer_sysctl[ i ]);
    MAP_TimerConfigure(timer_base[ i ], TIMER_CFG_32_BIT_PER);
    MAP_TimerEnable(timer_base[ i ], TIMER_A);
  }
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
  u32 res = 0;
  u32 base = timer_base[ id ];

  data = data;
  switch( op )
  {
    case PLATFORM_TIMER_OP_START:
      res = TIMER_MAX_COUNT;
      MAP_TimerControlTrigger(base, TIMER_A, false);
      MAP_TimerLoadSet( base, TIMER_A, TIMER_MAX_COUNT );
      break;

    case PLATFORM_TIMER_OP_READ:
      res = MAP_TimerValueGet( base, TIMER_A );
      break;

    case PLATFORM_TIMER_OP_SET_CLOCK:
    case PLATFORM_TIMER_OP_GET_CLOCK:
      res = MAP_SysCtlClockGet();
      break;

    case PLATFORM_TIMER_OP_GET_MAX_CNT:
      res = TIMER_MAX_COUNT;
      break;

  }
  return res;
}

static void pwms_init()
{
#if defined( EMULATE_PWM )
//TODO: Write me!!
//  for(id = 0; id < NUM_PWM; id++)
//	pwm_enabled[id] = FALSE;

#else
  MAP_SysCtlPeripheralEnable( SYSCTL_PERIPH_PWM );
  MAP_SysCtlPWMClockSet( SYSCTL_PWMDIV_1 );
#endif // EMULATE_PWM
}

u32 platform_pwm_set_clock( unsigned id, u32 clock )
{
#ifdef EMULATE_PWM
  return MAP_SysCtlClockGet();

#else
  unsigned i, min_i;
  u32 sysclk;

  sysclk = MAP_SysCtlClockGet();
  for( i = min_i = 0; i < sizeof( pwm_div_data ) / sizeof( u8 ); i ++ )
    if( ABSDIFF( clock, sysclk / pwm_div_data[ i ] ) < ABSDIFF( clock, sysclk / pwm_div_data[ min_i ] ) )
      min_i = i;
  MAP_SysCtlPWMClockSet( pwm_div_ctl[ min_i ] );
  return sysclk / pwm_div_data[ min_i ];
#endif // EMULATE_PWM
}

u32 platform_pwm_setup( unsigned id, u32 frequency, unsigned duty )
{
  u32 pwmclk = platform_pwm_get_clock( id );
  u32 period;

#if defined( FORLM3S9B92 ) || defined( FORLM3S9D92 ) || defined( FORLM4F )
  MAP_GPIOPinConfigure( pwm_configs[ id ] );
#endif

#ifdef EMULATE_PWM

// Assumes that GPIO for pins (sysctrl) have already been enabled by PIO module

//TODO: Be sure timer disabled before making changes
//  if allow timer to be used as PWM or timer, then need to keep track of use
//TODO: Maybe belong in general init 
  if (!pwm_enabled[id]){	// Initialize timer if not already set up
	MAP_GPIOPinTypeTimer(pwm_ports[id], pwm_pins[id]); 
	MAP_SysCtlPeripheralEnable(pwm_timer_base[id]);	
	MAP_TimerConfigure(pwm_timer_base[id], TIMER_CFG_SPLIT_PAIR|TIMER_CFG_A_PWM);
	pwm_enabled[id] = TRUE;
  }

  // Compute period
  period = pwmclk / frequency;
  MAP_TimerLoadSet(pwm_timer_base[id], TIMER_A, period);
  MAP_TimerMatchSet(pwm_timer_base[id], TIMER_A, ( period * duty ) / 100);
#else

  // Set pin as PWM
  MAP_GPIOPinTypePWM( pwm_ports[ id ], pwm_pins[ id ] );
  // Compute period
  period = pwmclk / frequency;
  // Set the period
  MAP_PWMGenConfigure( PWM_BASE, pwm_gens[ id >> 1 ], PWM_GEN_MODE_UP_DOWN | PWM_GEN_MODE_NO_SYNC );
  MAP_PWMGenPeriodSet( PWM_BASE, pwm_gens[ id >> 1 ], period );
  // Set duty cycle
  MAP_PWMPulseWidthSet( PWM_BASE, pwm_outs[ id ], ( period * duty ) / 100 );
  // Return actual frequency
#endif // EMULATE_PWM

  return pwmclk / period;
}

void platform_pwm_start( unsigned id )
{
#ifdef EMULATE_PWM
//FIXME: what does PWMOutputState do?
    MAP_TimerEnable(pwm_timer_base[id], TIMER_A);
#else
  MAP_PWMOutputState( PWM_BASE, 1 << id, true );
  MAP_PWMGenEnable( PWM_BASE, pwm_gens[ id >> 1 ] );
#endif // EMULATE_PWM
}

void platform_pwm_stop( unsigned id )
{
#ifdef EMULATE_PWM
//FIXME: what does PWMOutputState do?
    MAP_TimerDisable(pwm_timer_base[id], TIMER_A);
#else
  MAP_PWMOutputState( PWM_BASE, 1 << id, false );
  MAP_PWMGenDisable( PWM_BASE, pwm_gens[ id >> 1 ] );
#endif // EMULATE_PWM
}

int platform_flash_erase_sector( u32 sector_id )
{
  return MAP_FlashErase( sector_id * INTERNAL_FLASH_SECTOR_SIZE ) == 0 ? PLATFORM_OK : PLATFORM_ERR;
}
